@@ -43,6 +43,7 @@ use Brainworxx\Krexx\Analyse\Model;
 use Brainworxx\Krexx\Analyse\Routing\Routing;
 use Brainworxx\Krexx\Controller\DumpController;
 use Brainworxx\Krexx\Krexx;
+use Brainworxx\Krexx\Service\Factory\Event;
 use Brainworxx\Krexx\Service\Flow\Emergency;
 use Brainworxx\Krexx\Tests\Helpers\CallbackNothing;
 use Brainworxx\Krexx\View\Output\Browser;
@@ -103,6 +104,10 @@ class DumpControllerTest extends AbstractController
             ->method('checkEmergencyBreak')
             ->will($this->returnValue(false));
 
+        $poolMock->eventService = $this->createMock(Event::class);
+        $poolMock->eventService->expects($this->once())
+            ->method('dispatch');
+
         $outputServiceMock = $this->createMock(Browser::class);
         $outputServiceMock->expects($this->exactly(3))
             ->method('addChunkString')
@@ -110,12 +115,13 @@ class DumpControllerTest extends AbstractController
             ->willReturnSelf();
         $this->setValueByReflection('outputService', $outputServiceMock, $dumpController);
 
-        $poolMock->expects($this->exactly(3))
+        $poolMock->expects($this->exactly(4))
             ->method('createClass')
             ->with(...$this->withConsecutive(
                 [Model::class],
                 [Model::class],
-                [ThroughConfig::class]
+                [ThroughConfig::class],
+                [Model::class]
             ))->will($this->returnValueMap(
                 [
                     [Model::class, new Model(Krexx::$pool)],
